Bug 884275 - Report 'maybe' instead of 'probably' from canPlayType('video/webm'). r=rillian