content/media/test/can_play_type_webm.js
@@ -4,8 +4,8 @@ function check_webm(v, enabled) {
   }
 
   // WebM types
-  check("video/webm", "probably");
-  check("audio/webm", "probably");
+  check("video/webm", "maybe");
+  check("audio/webm", "maybe");
 
   // Supported Webm codecs
   check("audio/webm; codecs=vorbis", "probably");
